@@ -143,20 +143,20 @@ Single
 	 8775 4050 8775 5475
 2 1 1 1 0 7 50 0 -1 5.000 0 0 -1 0 0 2
 	 9975 4050 9975 5250
-4 0 0 50 0 16 12 0.0000 4 135 255 2175 2250 bin\001
+4 0 0 50 0 16 12 0.0000 4 135 255 2175 2250 pipeline\001
 4 0 0 50 0 16 12 0.0000 4 105 255 3525 3975 src\001
 4 0 0 50 0 16 12 0.0000 4 135 330 4725 3975 sink\001
 4 0 0 50 0 16 12 0.0000 4 105 255 6075 3975 src\001
 4 0 0 50 0 16 12 0.0000 4 135 330 7350 3975 sink\001
 4 0 0 50 0 16 12 0.0000 4 105 255 8625 3975 src\001
 4 0 0 50 0 16 12 0.0000 4 135 330 9750 3975 sink\001
-4 0 0 50 0 16 12 0.0000 4 165 1005 2250 3075 disk_source\001
-4 0 0 50 0 16 12 0.0000 4 150 465 4725 3075 parse\001
-4 0 0 50 0 16 12 0.0000 4 135 690 7275 3075 decoder\001
-4 0 0 50 0 16 12 0.0000 4 180 930 9750 3075 play_audio\001
+4 0 0 50 0 16 12 0.0000 4 165 1005 2250 3075 file source\001
+4 0 0 50 0 16 12 0.0000 4 150 465 4725 3075 ogg demuxer\001
+4 0 0 50 0 16 12 0.0000 4 135 690 7275 3075 vorbis decoder\001
+4 0 0 50 0 16 12 0.0000 4 180 930 9750 3075 audio output\001
 4 0 0 50 0 0 12 0.0000 4 135 75 3675 5475 ?\001
-4 0 0 50 0 0 12 0.0000 4 135 735 9825 5475 audio/raw\001
-4 0 0 50 0 0 12 0.0000 4 180 855 4350 5325 audio/mpeg\001
-4 0 0 50 0 0 12 0.0000 4 135 735 8700 5625 audio/raw\001
-4 0 0 50 0 0 12 0.0000 4 180 855 5775 5625 audio/mpeg\001
-4 0 0 50 0 0 12 0.0000 4 180 855 7125 5325 audio/mpeg\001
+4 0 0 50 0 0 12 0.0000 4 135 735 9825 5475 audio/x-raw-int\001
+4 0 0 50 0 0 12 0.0000 4 180 855 4350 5325 application/ogg\001
+4 0 0 50 0 0 12 0.0000 4 135 735 8700 5625 audio/x-raw-int\001
+4 0 0 50 0 0 12 0.0000 4 180 855 5775 5625 audio/x-vorbis\001
+4 0 0 50 0 0 12 0.0000 4 180 855 7125 5325 audio/x-vorbis\001
