@@ -1,3 +1,10 @@
+2005-06-29  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* docs/manual/advanced-autoplugging.xml:
+	* docs/manual/mime-world.fig:
+	  Try to get autoplugging working, fix type detection. Fix text
+	  in hello-world image.
+
 2005-06-29  Wim Taymans  <wim@fluendo.com>
 
 	* gst/base/gstbasesink.c: (gst_base_sink_handle_object),
